comit